# home-management

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
static/css/: index.css
static/js/: main.js
templates/: base.html.tera  budgetary_quote.html.tera  budgetary_quote_input.html.tera  budgetary_quote_output.html.tera  hello.html.tera  index.html.tera  library_home.html.tera  root.html.tera  temperature.html.tera
