[package]
name = "management"
version = "0.1.0"
authors = ["William Ben Glaeser <w.glaeser@lse.ac.uk>"]
edition = "2018"

[dependencies]
tera = "0.11.20"
rocket = "0.4.0"
calamine = "0.15.3"
itertools = "0.8.0"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["handlebars_templates", "tera_templates", "serve"]
